--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,34 +1,39 @@
-
-.status-bar{
+.status-bar {
     display: flex;
     justify-content: space-between;
-    padding:5px 3px;
+    padding: 5px 3px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: white;
+    z-index: 1;
 }
 
-.status-bar{
+.status-bar {
     display: flex;
     justify-content: center;
 }
 
-.status-bar__column{
+.status-bar__column {
     width: 33%;
 }
 
-.status-bar__column:nth-child(2){
+.status-bar__column:nth-child(2) {
     display: flex;
     justify-content: center;
 }
 
-.status-bar__column:last-child{
+.status-bar__column:last-child {
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
 
-.status-bar__column:first-child span{
+.status-bar__column:first-child span {
     margin-right: 5px;
 }
 
-.status-bar .fa-battery-full{
+.status-bar .fa-battery-full {
     margin: 0 5px;
 }
