--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
-@import "reset.css";
-@import "variables.css";
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
+@import 'reset.css';
+@import 'variables.css';
 /*components*/
-@import "components/status-bar.css";
+@import 'components/status-bar.css';
+@import 'components/nav_bar.css';
+@import 'components/screen-header.css';
+@import 'components/user-component.css';
+@import 'components/badge.css';
 /*screens*/
-@import "screens/login.css";
+@import 'screens/login.css';
+@import 'screens/friends.css';
+@import 'screens/chats.css';
+@import 'screens/find.css';
 
-body{
-    font-family: 'Open Sans', sans-serif;    
+body {
+    font-family: 'Open Sans', sans-serif;
 }
 
+.main-screen {
+    padding: var(--horizontal-space);
+}
