--- a/css/variables.css
+++ b/css/variables.css
@@ -1,3 +1,7 @@
-:root{
-    --yellow: #FAE100 ;
+:root {
+    --yellow: #fae100;
+    --horizontal-space: 25px;
+    --main-border: 1px solid rgba(0, 0, 0, 0.07);
+    --grey: rgba(0, 0, 0, 0.5);
+    --light-border: 1px solid rgba(0, 0, 0, 0.05);
 }
