--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -15,3 +15,16 @@
     margin-left: 20px;
     position: relative;
 }
+
+@keyframes rotateCog {
+    from {
+        transform: none;
+    }
+    to {
+        transform: rotateZ(360deg);
+    }
+}
+
+.screen-header__icon .fa-cog:hover {
+    animation: rotateCog 1s linear infinite;
+}
