--- a/css/styles.css
+++ b/css/styles.css
@@ -5,13 +5,18 @@
 @import 'components/status-bar.css';
 @import 'components/nav_bar.css';
 @import 'components/screen-header.css';
+@import 'components/alt-screen-header.css';
 @import 'components/user-component.css';
 @import 'components/badge.css';
+@import 'components/icon-row.css';
+@import 'components/no-mobile.css';
 /*screens*/
 @import 'screens/login.css';
 @import 'screens/friends.css';
 @import 'screens/chats.css';
 @import 'screens/find.css';
+@import 'screens/more.css';
+@import 'screens/chat.css';
 
 body {
     font-family: 'Open Sans', sans-serif;
