--- a/css/variables.css
+++ b/css/variables.css
@@ -4,4 +4,5 @@
     --main-border: 1px solid rgba(0, 0, 0, 0.07);
     --grey: rgba(0, 0, 0, 0.5);
     --light-border: 1px solid rgba(0, 0, 0, 0.05);
+    --title-font-size: 14px;
 }
